--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
                 <div class="col d-flex justify-content-center my-5 flex-column">
                     <div class="text-login">
                         <p>
-                          Organize suas finânças de uma forma fácil.</p>
+                          ajuste suas finânças de uma forma fácil.</p>
                           <p>Controle seu dinheiro e investimentos.</p>
                           <p>Economize e atinja seus objetivos.</p>
                     </div>
