--- a/public/transactions.html
+++ b/public/transactions.html
@@ -10,32 +10,30 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body id="app"> 
-    <header>
-      <nav class="navbar navbar-expand navbar-light bg-white">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#"  >
-            <img src="./assets/images/nikel-small-logo.png" alt="logo nikel" class="image-fluid" srcset="">
-          </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-            <div class="d-flex menu">
-              <a href="home.html"><button class="btn" type="button"><i class="bi bi-house-door-fill fs-4 color-secondary"></i></a></button>
-              <a href="transactions.html"><button class="btn" type="button"><i class="bi bi-currency-exchange fs-4"></i></button></a> 
-              <div class="dropdown">
-                <button class="btn" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                  <i class="bi bi-person-circle fs-4"></i>
-                </button>
-                <ul class="dropdown-menu logout" aria-labelledby="dropdownMenuButton1">
-                  <li><button class="dropdown-item" id="button-logout">Sair</button></li>
-                </ul>
-              </div>
-            </div>
+  <nav class="navbar navbar-expand navbar-light bg-white">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#"  >
+        <img src="./assets/images/nikel-small-logo.png" alt="logo nikel" class="image-fluid" srcset="">
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+        <div class="d-flex menu">
+          <a href="home.html"><button class="btn" type="button"><i class="bi bi-house-door-fill fs-4 color-secondary"></i></a></button>
+          <a href="transactions.html"><button class="btn" type="button"><i class="bi bi-currency-exchange fs-4"></i></button></a> 
+          <div class="dropdown">
+            <button class="btn" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+              <i class="bi bi-person-circle fs-4"></i>
+            </button>
+            <ul class="dropdown-menu logout" aria-labelledby="dropdownMenuButton1">
+              <li><button class="dropdown-item" id="button-logout">Sair</button></li>
+            </ul>
           </div>
         </div>
-      </nav>
-    </header>
+      </div>
+    </div>
+  </nav>
     <main>
         <div class="container-lg">
             <div class="row">
@@ -43,7 +41,7 @@
                     <i class="bi bi-person-circle color-primary icon-detail"></i>
                     <samp class="fs-2">lançamentos</samp>
                 </div>
-                <div>
+                <div class="col d-flex justify-content-end">
                     <img src="./assets/images/coins-small.png" alt="image-coins" srcset="">
                 </div>
                 <div class="row">
