correção de estilo

--- a/public/index.html
+++ b/public/index.html
@@ -20,12 +20,10 @@
                           <p>Economize e atinja seus objetivos.</p>
                     </div>
                     <div class="text-center">
-            
+                      <img src="./assets/images/pocket.png" alt="image pocket" class="img-fluid d-none d-md-inline">
+                      <img src="./assets/images/coins.png" alt="image coins" class="img-fluid d-none d-md-inline">
                     </div>
-                    <img src="./assets/images/pocket.png" alt="" srcset="image pocket" class="image-fluid">
-                    <img src="./assets/images/coins.png" alt="image coins" class="img-fluid d-none d-md-inline" srcset="">
-
-                </div>
+                  </div>
                 <div class="col d-flex justify-content-center my-5 flex-column">
                     <div class="container">
                         <div class="row">
@@ -60,26 +58,21 @@
                                         </p>
                                     </div>
                                     <div class="row">
-                                        <div class="col">
-                                            <div>
-                                                <img src="./assets/images/codai-logo.png" alt="" srcset="">
-                                            </div>
-                                        </div>
-                                        <div class="row">
-                                            <div class="col">
-                                                <div class="class col">
-                                                
-                                                </div>
-                                                <div>
-                                                    <img src="./assets/images/growdev-logo.png" alt="" srcset="">
-                                                </div>
-                                            </div>
+                                      <div class="col">
+                                          <div>
+                                              <img src="./assets/images/codai-logo.png" alt="" srcset="">
+                                          </div>
+                                      </div>
+                                      <div class="row">
+                                          <div class="col">
+                                              <img src="./assets/images/growdev-logo.png" alt="" srcset="">
+                                          </div>
+                                      </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-
                 </div>
             </div>
         </div>
