--- a/public/index.html
+++ b/public/index.html
@@ -26,15 +26,15 @@
                   </div>
                 <div class="col d-flex justify-content-center my-5 flex-column">
                     <div class="container">
+                        <div class="col mb-5">
+                            <img src="./assets/images/nikel-logo.png" alt="logo nikel" class="img-fluid" srcset="">
+                        </div>
                         <div class="row">
-                            <div class="col">
-                                <img src="./assets/images/nikel-logo.png" alt="logo nikel" class="img-fluid" srcset="">
-                            </div>
                             <div class="row">
                                 <div class="col">
                                     <form id="login-form">
                                         <div class="mb-3">
-                                          <label for="email-input" class="form-label">Endereço de e-mail.</label>
+                                          <label for="email-input" class="form-label">Endereço de e-mail</label>
                                           <input type="email" class="form-control" id="email-input" aria-describedby="emailHelp">
                                           <div id="emailHelp" class="form-text">Utilize uma senha fácil de lebrar</div>
                                         </div>
@@ -46,7 +46,7 @@
                                           <input type="checkbox" class="form-check-input" id="session-check">
                                           <label class="form-check-label" for="session-check">Permanecer logado.</label>
                                         </div>
-                                        <button type="submit" class="btn btn-primary">Entrar.</button>
+                                        <button type="submit" class="btn btn-primary">Entrar</button>
                                       </form>
                                 </div>
                                 <div class="mb-3"></div>
